--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
