--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-images-uploading": "^3.1.7",
     "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
