--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@types/react-slick": "^0.23.13",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.7.2",
+    "js-brasil": "^2.6.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "^14.2.5",
+    "next-nprogress-bar": "^2.3.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-images-uploading": "^3.1.7",
     "react-input-mask": "^2.0.4",
